--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,12 @@
         <java.version>1.8</java.version>
     </properties>
 
+    <scm>
+        <connection>scm:git:https://github.com/amirmv2006/build-jenk.git</connection>
+        <developerConnection>scm:git:https://github.com/amirmv2006/build-jenk.git</developerConnection>
+        <url>https://github.com/amirmv2006/build-jenk.git</url>
+    </scm>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -41,6 +47,17 @@
             <optional>true</optional>
         </dependency>
         <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.github.stephenc.jcip</groupId>
+            <artifactId>jcip-annotations</artifactId>
+            <version>1.0-1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
@@ -58,6 +75,13 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <forkCount>5</forkCount>
+                </configuration>
             </plugin>
         </plugins>
     </build>
