--- a/pom.xml
+++ b/pom.xml
@@ -80,4 +80,24 @@
         </plugins>
     </build>
 
+    <profiles>
+        <profile>
+            <id>deploy</id>
+            <properties>
+                <docker.available>false</docker.available>
+            </properties>
+            <distributionManagement>
+                <repository>
+                    <id>releases</id>
+                    <name>releases</name>
+                    <url>http://${env.MAVEN_REPO_BASE_URL}/${env.MAVEN_DEPLOY_RELEASE_REPO}/</url>
+                </repository>
+                <snapshotRepository>
+                    <id>snapshots</id>
+                    <name>snapshots</name>
+                    <url>http://${env.MAVEN_REPO_BASE_URL}/${env.MAVEN_DEPLOY_SNAPSHOT_REPO}/</url>
+                </snapshotRepository>
+            </distributionManagement>
+        </profile>
+    </profiles>
 </project>
