--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>ir.amv.snippets</groupId>
     <artifactId>build-jenk</artifactId>
-    <version>0.0.8-SNAPSHOT</version>
+    <version>0.0.8</version>
     <name>build-jenk</name>
     <description>Demo project for Spring Boot</description>
 
@@ -22,7 +22,7 @@
         <connection>scm:git:https://github.com/amirmv2006/build-jenk.git</connection>
         <developerConnection>scm:git:https://github.com/amirmv2006/build-jenk.git</developerConnection>
         <url>https://github.com/amirmv2006/build-jenk.git</url>
-        <tag>HEAD</tag>
+        <tag>build-jenk-0.0.8</tag>
     </scm>
 
     <modules>
